Closed Bug 1765396 Opened 2 years ago Closed 2 years ago

NativeLayerCA should not block HDR video playback on `gfx.core-animation.specialize-video` pref

Categories

(Core :: Graphics, defect, P2)

Unspecified
macOS
defect

Tracking

()

VERIFIED FIXED
101 Branch
Tracking Status
firefox100 --- verified
firefox101 --- verified

People

(Reporter: bradwerth, Assigned: bradwerth)

References

Details

Attachments

(1 file)

NativeLayerCA::ShouldSpecializeVideo checks this pref before it checks to see if the video is HDR. We don't want the pref to turn off HDR support, so this logic should be reordered.

Pushed by bwerth@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e621c0f4e0da
Make macOS always use specialized video layers for HDR video. r=mstange
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch

Verified - Fixed in latest Nightly 101.0a1 (2022-04-20) (build id: 20220420094247). HDR videos are rendered accordingly in HDR, with gfx.core-animation.specialize-video set to false as well.

Status: RESOLVED → VERIFIED

can you nominate this for an uplift based on bug 1763782?

Flags: needinfo?(bwerth)

Comment on attachment 9272899 [details]
Bug 1765396: Make macOS always use specialized video layers for HDR video.

Beta/Release Uplift Approval Request

  • User impact if declined: macOS HDR video will not be displayed correctly in Beta or Release.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch just eliminates the unintended influence of a pref.
  • String changes made/needed:
  • Is Android affected?: No
Flags: needinfo?(bwerth)
Attachment #9272899 - Flags: approval-mozilla-beta?

Comment on attachment 9272899 [details]
Bug 1765396: Make macOS always use specialized video layers for HDR video.

Approved for 100.0b9

Attachment #9272899 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Depends on: 1763782

Verified - Fixed in latest Beta 100.0 (build id: 20220425210429). HDR videos are rendered accordingly in HDR with gfx.core-animation.specialize-video set to false.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: