Bug 1765396: Make macOS always use specialized video layers for HDR video. r=mstange,a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D144049